--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,6 @@
 		"guzzlehttp/guzzle": "6.2.x"
 	},
 	"extra": {
-		"installer-paths": {
-			"quaff": [
-				"crackerjackdigital/silverstripe-quaff"
-			]
-		}
+		"installer-name": "quaff"
 	}
 }
