updates for GuzzleHttp 6.x from 3.x

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -4,6 +4,9 @@ Name: quaff-config
 Injector:
   QuaffMapper:
     class: QuaffArrayMapper
+QuaffModelController:
+  extensions:
+    - QuaffModelControllerExtension
 QuaffModel:
   extensions:
     - QuaffMappableExtension
